--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 // -->
 </style>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-136961015-1"></script>
+<script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag("js", new Date());gtag("config", "UA-136961015-1");</script>
 
 </head>
 
